--- a/src/app/home/login/loginpsi.component.html
+++ b/src/app/home/login/loginpsi.component.html
@@ -22,11 +22,11 @@
     Registrate Aquí
   </button>
 </div>
-<button class="register" [routerLink]="['/home/reg_dato_psicologo']">
-  Registrate Aquí
-</button>
 
   <div class="container">
+    <button class="register" [routerLink]="['/home/reg_dato_psicologo']">
+      Registrate aquí
+    </button>
     
      <h5>¡Bienvenido de nuevo!</h5>
      <label class="info" >Para conectarte con nostros porfavor ingresa tus credenciales personales 🔔</label>
@@ -60,5 +60,6 @@
     <a  href="home/forgot-password"   >¿Olvidó su contraseña?</a>
     
     <button class="login-btn" (click)="login()">Ingresar</button>
+    <label for="" class="separador">O</label>
   </div>
 </body>
