--- a/src/app/home/forgot-pssw/forgot-pssw.component.html
+++ b/src/app/home/forgot-pssw/forgot-pssw.component.html
@@ -4,7 +4,7 @@
         <h6>Olvidó su contraseña</h6>
         <label style="font-size: 14px;
         margin-top: 15px;
-        color: red;" for="">Por favor ingrese el correo electrónico con el que se registró. </label>
+        color: red;" for="">Por favor ingrese el correo electrónico con el que se registró al inicio. </label>
         <div class="cont-body">
             <div class="input-style">
                 <label for="" >Correo Electronico:</label>
