--- a/src/app/home/reg-dato-psicologo/reg-dato-psicologo.component.html
+++ b/src/app/home/reg-dato-psicologo/reg-dato-psicologo.component.html
@@ -156,7 +156,7 @@
               <mat-form-field class="example-full-width">
                 <mat-label>Nro. Colegiatura</mat-label>
                 <input matInput formControlName="n_colegiatura"  placeholder="44444">
-                <mat-error *ngIf="psicologo.get('n_colegiatura').hasError('pattern')">*Por favor introducir un numero valido.</mat-error>
+                <mat-error *ngIf="psicologo.get('n_colegiatura').hasError('pattern')">*Por favor introducir un número válido.</mat-error>
                 <mat-error *ngIf="psicologo.get('n_colegiatura').hasError('required')">*requerido</mat-error>
               </mat-form-field>
 
