--- a/src/app/home/login/loginpsi.component.css
+++ b/src/app/home/login/loginpsi.component.css
@@ -63,7 +63,7 @@ body::after{
 
 .input-style{
   width: 100%;
-  height: 50px;
+  min-height: 60px;
   margin-bottom: 10px;
   display: flex;
   align-items: center;
@@ -102,7 +102,7 @@ body::after{
   padding-right: 50px;
   font-weight: 500;
   outline: none;
-  height: 25%;
+  height: 50%;
   
 }
 .input-style i{
