--- a/src/app/home/homepage/home.component.html
+++ b/src/app/home/homepage/home.component.html
@@ -25,7 +25,7 @@
   <label for="">OÍDO<span>AMIGO</span></label>
   <h1>servicio psicológico <b>gratuito</b> </h1>
   <p>Tenemos como propósito ayudarte a afrontar dificultades emocionales y mejorar tu calidad de vida.</p>
-  <button (click)="cerrar()">¡Regístrate aquí!</button>
+  <button (click)="cerrar()">¡ Realiza tu consulta aquí !</button>
   
   </div>
 
