--- a/src/app/navbar/bandeja-in/bandeja-in.component.css
+++ b/src/app/navbar/bandeja-in/bandeja-in.component.css
@@ -344,12 +344,14 @@ margin-bottom: 0px;
   font-size: 13px;
  } 
 .buttons-group button{
-    padding: 4px 10px;
-    border: 1px solid #6c83a4;
-    font-size: 11px;
-    font-weight: bold;
-    border-radius: 4px;
-    text-transform: uppercase;
+  padding: 6px 10px;
+  border: 1px solid #6c83a4;
+  background: #0f3971;
+  font-size: 11px;
+  font-weight: bold;
+  color: white;
+  border-radius: 4px;
+  text-transform: uppercase;
 }
 
 
