--- a/src/app/reportes/reportes/reportes.component.css
+++ b/src/app/reportes/reportes/reportes.component.css
@@ -97,7 +97,7 @@ width: 100%;
 position: relative;
 background: white;
 grid-column: 1/3;
-height: 100%;
+height: max-content;
 }
 .list-psi .selecttype{
   margin-left: 0px;
