--- a/src/app/home/login/loginpsi.component.css
+++ b/src/app/home/login/loginpsi.component.css
@@ -95,18 +95,22 @@ body::after{
   height: 25%;
 }
 .input-style input{
-  width: 85%;
- margin-top: 15px;
-  border: 0;
-  font-size: 13px;
-  padding-right: 50px;
-  font-weight: 500;
-  outline: none;
-  height: 50%;
+  width: 100%;
+    
+    border: 0;
+    font-size: 13px;
+    padding-right: 50px;
+    padding-left: 15%;
+    padding-top: 15px;
+    font-weight: 500;
+    outline: none;
+    height: 100%;
   
 }
 .input-style i{
   color: #b0b3be;
+  position: absolute;
+  left: 0px;
 }
 #show {
 position: absolute;
