--- a/src/app/navbar/datos-user/datos-user.component.html
+++ b/src/app/navbar/datos-user/datos-user.component.html
@@ -207,7 +207,7 @@
             <div style="width: 100;height: 100%; ">
               <h5 >Horario</h5>
         
-                <form style="padding: 10px 35px 10px 50px; display: flex;flex-direction: row;">
+                <form class="time-container">
                 <div class="horarioadd">
                   <div class="horario-input" >
         
