--- a/src/app/navbar/datos-user/datos-user.component.css
+++ b/src/app/navbar/datos-user/datos-user.component.css
@@ -44,6 +44,7 @@ img{
   padding: 7px;
   background: #f9fcff;
   margin:  0 auto;
+  object-fit: cover;
   margin-top: 50%;
   position: relative;
   overflow: hidden;
