--- a/src/app/navbar/nav/nav.component.html
+++ b/src/app/navbar/nav/nav.component.html
@@ -26,7 +26,7 @@
   <div class="footer">
     <ul class="footerlist">
           <li class="footer-son">
-            <img [routerLink]="['perfil_user']" [src]="this.imagenserv.nombre" style="margin-right: 20px;margin-left: -7px;"
+            <img [routerLink]="['perfil_user']" [src]="this.imagenserv.nombre" style="margin-right: 20px;margin-left: -7px; object-fit: cover;"
           
            >
          
