--- a/src/app/reportes/reporte_individual/reporte-i.component.html
+++ b/src/app/reportes/reporte_individual/reporte-i.component.html
@@ -14,6 +14,7 @@
       <div style="width: 170px;text-align: center;">
         <img id="perfil" style="width: 120px;
           margin-top: 7%;
+          object-fit: cover;
           height: 80%;" alt="">
       </div>
       <div style="display: flex;flex-direction: column;padding:10px;width: 50%;"
