--- a/src/app/navbar/bandeja-in/bandeja-in.component.css
+++ b/src/app/navbar/bandeja-in/bandeja-in.component.css
@@ -40,14 +40,14 @@ color: #13c298;
     flex-direction: row;
     width: 95%;
     justify-content: space-between;
+    align-items: center;
     margin: 0 auto;
-    border-bottom: 2px solid #ffc300;
     background: white;
-    height: 10%;
+    min-height: 65px;
     border: 0.0625rem solid #e4e9f2;
-    /* box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px; */
-    padding: 25px 35px 0px 35px;
-  }
+    padding: 0px 15px 0px 15px;
+}
+  
  
   .list-asignaciones .bottom{
     width: 95%;
@@ -688,8 +688,8 @@ color: #198d8d;
    width: 100%;
  }
  .list-asignaciones .top{
-  height: 20%;
-  padding: 10px 35px 0px 35px;
+  min-height: 30%;
+  padding: 2px 35px 0px 35px;
   width: 100%;
  }
  .visualizador{
@@ -728,17 +728,26 @@ color: #198d8d;
    .asignacion{
      min-width: 95%;
    }
+.container-content .list-asignaciones {
+    padding-left: 10px;
+    padding-right: 10px;
+}
    .divider{
      flex-direction: column;
    }
    .divider .pt1{
      width: 100%;
    }
-
+  .list-asignaciones .top{
+    padding: 2px 10px 0px 10px;
+  }
  }
  @media only screen and (max-width: 430px) {
   .asignacion{
     min-width: 100%;
+  }
+  b .new{
+    display: none;
   }
 
 }
